// Original file: proto/courseService.proto


export interface MyPresence {
  'id'?: (number);
  'rollCallId'?: (number);
  'timestamp'?: (string);
  'periodStart'?: (string);
  'periodEnd'?: (string);
}

export interface MyPresence__Output {
  'id': (number);
  'rollCallId': (number);
  'timestamp': (string);
  'periodStart': (string);
  'periodEnd': (string);
}
